level3 final completion and added outputs screenshots